CRUD  cliente completo
CRUD completo de clientes, notar que hay procedimientos almacenados nuevos creados para el correcto funcionamiento del sistema y debe ser compilado en cada base de datos que se ejecute